@@ -4,6 +4,7 @@ Passwords should be set with a project.ini->salt. Salt is now a required project
 Setting rules for user passwords has changed and has become more powerfull, unless you do not set them.
 The table gems__staff is split into gems__staff, gems__user_logins with generic login data and gems__users_passwords containing db stored password information.
 GemsEscort->afterLogin(), ->afterLogout() and ->loadLoginInfo(0 are now all handled by Gems_User_UserDefinitionInterface objects.
+GemsEscort->session kept for compatibility reasons, but use should be stopped.
 The table gems__user_ids provides unique and non-sequential user ids accross gems__staff and gems__respondents.
 The gems__respondent.grs_bsn has been renamed to grs_ssn, to make the code more international.
 MailController is now called MailTemplateController.
